[package]
name = "tca9535"
version = "0.1.0"
authors = ["Zac Berkowitz <zberkowitz@whoi.edu>"]
edition = "2018"
license = "BSD-2-Clause"
repository = "https://gitlab.com/berkowski/tca9535-rs"
keywords = ["embedded-hal-driver", "i2c", "gpio"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
description = "embedded-hal driver for the TCA9535 port expander"

[dependencies]
embedded-hal = "^0.2"
bitflags = "1.2"

[dev-dependencies]
embedded-hal-mock = "^0.7"

