[package]
name = "tca9535"
version = "0.2.0"
authors = [
  "Zac Berkowitz <zberkowitz@whoi.edu>",
  "Arno Daeuper <arno.dauuper@graw.de>",
  "Niklas Wildenburg <niklas.wildenburg@graw.de>"
]
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/GrawRadiosondes/tca9535-rs"
keywords = ["embedded-hal-driver", "i2c", "gpio"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
description = "embedded-hal 1.0 driver for the TCA9535 port expander"

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.13.1"

[dev-dependencies]
embedded-hal-mock = "0.11.1"
